# superm-leptos

./: Cargo.toml  Readme.md  Trunk.toml  index.html  test3000.js  test5173.js
public/: index.html
src/: api.rs  main.rs  models.rs
src/components/: cart.rs  landing.rs  login.rs  mod.rs  navbar.rs  price.rs  product.rs  product_details.rs  products.rs  profile.rs
superm-v2/: package-lock.json  package.json
