[package]
name = "superm-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
leptos_router = { version = "0.8.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "Headers"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
